--- a/milestone1.html
+++ b/milestone1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 style="color:red;">First Milestone</h1>
-<h2 style="color:blue;">MY_WEB_PAGE.HTML</h2>
-<p>The physical world and the inner soul constitute nature, the ultimate source of our living. Both living and non-living things include nature, and everyone is interdependent, which helps maintain the ecosystem</p>
-<p>Nature is made of everything we see around us – trees, flowers, plants, animals, sky, mountains, forests and more</p>
+<h1 style="color:green;">First Milestone</h1>
+<h2 style="color:red;">MY_WEB_PAGE.HTML</h2>
 <img src="https://thumbs.dreamstime.com/b/nature-flowers-wallpaper-flowers-beautiful-nature-sunrises-good-morning-beautiful-nature-nature-flower-flowers-wallpaper-beautiful-141468868.jpg" alt="NATURE" width="400" height="500">
+<p>The physical world and the inner soul constitute nature, the ultimate source of our living. Both living and non-living things include nature, and everyone is interdependent, which helps maintain the ecosystem.Everything we see around us constitutes nature, including the sun, the moon, trees, flowers, fruits, human beings, birds, animals, etc. In nature, everyone depends on one another to keep the ecosystem healthy. For survival, every creature is interrelated and reliant on one another. Humans, for example, rely on nature for their survival, and nature provides us with oxygen, food, water, shelter, medicines, and clothing, among other things. Many shades may be seen in nature, contributing to the planet’s beauty. Along with humans, animals and birds also find their habitat and means of survival in nature. Therefore, it is essential to take proper care of our nature for maintaining a healthy life.</p>
+<p>Nature is made of everything we see around us – trees, flowers, plants, animals, sky, mountains, forests and more.Essentially, nature is everything we are surrounded by like the water we drink, the air we breathe, the sun we soak in, the birds we hear chirping, the moon we gaze at and more. Above all, it is rich and vibrant and consists of both living and non-living things.</p>
 </body>
 </html>
